--- a/starter-template.css
+++ b/starter-template.css
@@ -6,6 +6,12 @@ body {
   text-align: center;
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #map {
 	height: 500px;
 	width: 100%;
