--- a/starter-template.css
+++ b/starter-template.css
@@ -1,6 +1,17 @@
-body {
-  padding-top: 5rem;
+html {
+  font-size: 14px;
 }
+
+@media (min-width: 768px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+body {
+  padding-top: 3.5rem;
+}
+
 .starter-template {
   padding: 3rem 1.5rem;
   text-align: center;
@@ -11,6 +22,23 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+
+.container {
+  max-width: 960px;
+}
+
+.pricing-header {
+  max-width: 700px;
+}
+
+.card-deck .card {
+  min-width: 220px;
+}
+
+.border-top { border-top: 1px solid #e5e5e5; }
+.border-bottom { border-bottom: 1px solid #e5e5e5; }
+
+.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
 
 #map {
 	height: 500px;
