--- a/starter-template.css
+++ b/starter-template.css
@@ -21,6 +21,8 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    max-width:100%;
+	max-height:100%;
 }
 
 .container {
